@@ -136,11 +136,6 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         self.cache = AptCache()
         self.cache.connect("cache-broken", self._on_apt_cache_broken)
 
-        # reviews
-        self.review_loader = get_review_loader(self.cache)
-        # FIXME: add some kind of throttle, I-M-S here
-        self.review_loader.refresh_review_stats(self.on_review_stats_loaded)
-
         # backend
         self.backend = get_install_backend()
         self.backend.connect("transaction-finished", self._on_transaction_finished)
@@ -171,6 +166,11 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
                                  "package."))
             # FIXME: force rebuild by providing a dbus service for this
             sys.exit(1)
+
+        # reviews
+        self.review_loader = get_review_loader(self.cache, self.db)
+        # FIXME: add some kind of throttle, I-M-S here
+        self.review_loader.refresh_review_stats(self.on_review_stats_loaded)
     
         # additional icons come from app-install-data
         self.icons = gtk.icon_theme_get_default()
