@@ -5,6 +5,9 @@ software-center (3.1.23.2) UNRELEASED; urgency=low
   * softwarecenter/db/database.py, test/test_appstore.py:
     - fix locking and add regression test, thanks to Matthew McGowan
       for the research into this
+  * softwarecenter/db/reviews.py:
+    - fix support for reviews in not enabled PPAs (like for-pay PPAs)
+      LP: #731376
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Mar 2011 09:15:22 +0100
 
